# message-type-comparison

./: .gitignore  README.md  pyproject.toml
message_type_comparison/: __main__.py
tests/: test_message_type_comparison.py
